--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                <div class="header_inner">
                                    <div class="col-md-2">
                                        <div class="logo">
-                                           <img src="img/logo.png" alt="">
+                                        <a href="index.html"><img src="img/logo.png" alt=""></a>
                                        </div>
                                    </div>
                                    <div class="col-md-8">
@@ -40,25 +40,25 @@
                                                <li>
                                                <a href="#">Education <i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
                                                    <ul>
-                                                       <li><a href="#">K-12 and Universities</a></li>
-                                                       <li><a href="#">Language Schools</a></li>
-                                                       <li><a href="#">Independent Teachers</a></li>
-                                                       <li><a href="#">Home Schools</a></li>
+                                                       <li><a href="k12_university.html">K-12 and Universities</a></li>
+                                                       <li><a href="langusge_school.html">Language Schools</a></li>
+                                                       <li><a href="independent_teacher.html">Independent Teachers</a></li>
+                                                       <li><a href="home_school.html">Home Schools</a></li>
                                                    </ul>
                                                </li>
                                                <li>
                                                <a href="#">Business <i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
                                                   <ul>
-                                                      <li><a href="#">Aviation</a></li>
-                                                      <li><a href="#">Engineering</a></li>
-                                                      <li><a href="#">Finance</a></li>
-                                                      <li><a href="#">Hospitality</a></li>
-                                                      <li><a href="#">Logistics</a></li>
-                                                      <li><a href="#">Medicine</a></li>
-                                                      <li><a href="#">Oil and Gas</a></li>
-                                                      <li><a href="#">Sales</a></li>
-                                                      <li><a href="#">Technology</a></li>
-                                                      <li><a href="#">Other</a></li>
+                                                      <li><a href="avaition.html">Aviation</a></li>
+                                                      <li><a href="engineering.html">Engineering</a></li>
+                                                      <li><a href="finance.html">Finance</a></li>
+                                                      <li><a href="hospitality.html">Hospitality</a></li>
+                                                      <li><a href="logistics.html">Logistics</a></li>
+                                                      <li><a href="medician.html">Medicine</a></li>
+                                                      <li><a href="oiland_gas.html">Oil and Gas</a></li>
+                                                      <li><a href="Sales.html">Sales</a></li>
+                                                      <li><a href="Technology.html">Technology</a></li>
+                                                      <li><a href="other.html">Other</a></li>
                                                   </ul>
                                                </li>
                                                <li><a href="#">Personal</a></li>
@@ -82,15 +82,16 @@
                                     <div class="col-md-4">
                                         <div class="video_content">
                                             <h1>FluentU brings language learning to life with real world videos!</h1>
-                                            <button class="btn">Try It Free</button>
+                                            <a href="registerform.html"><button class="btn">Try It Free</button></a>
                                         </div>
                                     </div>
                                     <div class="col-md-8">
                                         <div class="video_url">
                                             <div class="embed-responsive embed-responsive-16by9">
-                                           <iframe width="1280" height="720" src="https://www.youtube.com/embed/_uJ3-BeKORU" frameborder="0" allowfullscreen></iframe>
+                                           <iframe width="1280" height="720" src="https://www.youtube.com/embed/2RRY3OVqtwc" frameborder="0" allowfullscreen></iframe>
                                           </div>
                                         </div>
+                                        
                                     </div>
                                     <div class="clear"></div>
                                 </div>
