--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
                                                <li>
                                                <a href="#">About Us<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
                                                    <ul>
-                                                       <li><a href="">Biographies</a></li>
-                                                       <li><a href="">Photos</a></li>
-                                                       <li><a href="">Teaching Methods</a></li>
+                                                       <li><a href="biographies.html">Biographies</a></li>
+                                                       <li><a href="teachingmethods.html">Teaching Methods</a></li>
                                                    </ul>
                                                </li>
 											   <li><a href="location.html">Location</a></li>
@@ -189,9 +188,8 @@ We offer a convenient location near the BTS, and affordable rates.</h1>
                                     <div class="about_list_area">
                                         <ul>
                                            <h4>About Us</h4>
-                                            <li><a href="#">Biographies</a></li>
-                                           <li><a href="#">photos</a></li>
-                                           <li><a href="#">Teaching Methods</a></li>
+                                            <li><a href="biographies.html">Biographies</a></li>
+                                            <li><a href="teachingmethods.html">Teaching Methods</a></li>
                                                                                </ul>
                                     </div>
                                 </div>
