--- a/businessenglish.html
+++ b/businessenglish.html
@@ -24,7 +24,7 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
       <div class="fluent_page">
-          <div class="container page_bio">
+          <div class="container page_courses1">
               <div class="row">
                   <header class="header_area">
                        <div class="container">
@@ -93,9 +93,8 @@
                            <div class="container">
                            <div class="row">
                                <div class="col-md-12">
-                                   <h1 style="text-shadow: 2px 2px #ffffff">Biographies</h1>
-								   <p style="text-shadow: 2px 2px #ffffff">Jason and Phil are here to help you learn English in fun,
-									   innovate and flexible ways. </p>
+                                   <h1 style="color: #ffffff; text-shadow: 2px 2px #000000">Conversation Courses</h1>
+								   <p style="color: #ffffff; text-shadow: 2px 2px #000000">Our lessons are designed using the highest standard of academically verified materials, ...</p>
                                  </div>
                                </div>
                            </div>
@@ -112,27 +111,29 @@
                            <div class="row">
                                <div class="col-md-6">
                                    <div class="page_content_left">
-                                       <h2>Save Time and Motivate Students with Authentic, Engaging Content</h2>
-                                       <ul>
-                                           <li>Thousands of videos ranging from music videos and movie trailers, to news and inspiring talks.</li>
-                                           <li>All carefully curated and categorized from one of 6 levels</li>
-                                           <li>Subtitled, translated, and annotated by professional translators.</li>
-                                           <li>Integrated dictionary provides context-specific definitions, images, audio, multiple examples, and Clip Review.</li>
-                                           <li>Languages that can be learned: English, Chinese, Spanish, French, German,</li> 
-                                       </ul>
-                                       <h2>Easy to Get Started, But Built to Scale</h2>
-                                       <ul>
-                                           <li>Get started with just 10 students in your class</li>
-                                           <li>Cloud based so no installation or IT support required.</li>
-                                           <li>Separate students into separate classes.</li>
-                                           <li>Easily add more teachers to multi-teacher accounts.</li>
-                                           <li>Easily administer with centralized billing.</li> 
-                                       </ul>
+                                       <h2>Brainstorm English Course Outlines</h2>
+                                       <p>Our lessons are designed using the highest standard of academically verified materials, and each of our courses offered will include reference material and worksheets based on these books.</p>
+                                       <br>
+                                       <p>All you need to do is bring your pen, a notebook, and you’re ready to learn !
+</p>
+                                  <br> 
+                                  <h2>Materials and Lesson Structure</h2>
+                                  <p>Below are the books we use for each of our courses, and the structure of our lessons and courses in general.</p>
+                                  <br>
+                                  <p>Most books have 10 - 12 units, and 1 class is built around half a unit (1 full unit is covered per 2 classes). How fast you complete the course and progress depends on how many classes you book per week.
+</p>
+                       <br> 
+                                  <p>So we encourage you to book 2 classes together, to ensure full integration of the subject matters.</p>   
+                                  <ul>
+                                  	<li>The first lesson of each course will include placement assessment and signing of a student contract
+</li>
+                                 <li>There is a compulsory recap lesson that takes the place of 1 lesson, at the end of each course. This is to ensure full integration of the content has taken place, and to make sure the student is ready to advance to the next level.</li>
+                                  </ul>        
                                    </div>
                                </div>
                                <div class="col-md-6">
                                    <div class="page_content_right">
-                                       <h2>Immersive Video Quizzes, Assignments, and Progress Tracking</h2>
+                                       <h2>Conversation Courses</h2>
                                        <ul>
                                            <li>Video quizzes that let learners learn through context and immersion.</li>
                                            <li>Give students reps without feeling repetitive.</li>
