--- a/teachingmethods.html
+++ b/teachingmethods.html
@@ -50,29 +50,29 @@
                                                <li>
                                                <a href="#" style="color: #ffffff">Courses<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
                                                   <ul>
-                                                      <li><a href="">Conversation</a></li>
-                                                      <li><a href="">Grammer</a></li>
-                                                      <li><a href="">Business English</a></li>
-                                                      <li><a href="">IELTS</a></li>
-                                                      <li><a href="">TOEFL</a></li>
-                                                      <li><a href="">TOICE</a></li>
-                                                      <li><a href="">Academic Tutoring</a></li>
+                                                       <li><a href="conversation.html">Conversation</a></li>
+                                                      <li><a href="grammer.html">Grammer</a></li>
+                                                      <li><a href="businessenglish.html">Business English</a></li>
+                                                      <li><a href="ielts.html">IELTS</a></li>
+                                                      <li><a href="toefl.html">TOEFL</a></li>
+                                                      <li><a href="toice.html">TOICE</a></li>
+                                                      <li><a href="academictutoring.html">Academic Tutoring</a></li>
                                                       </ul>
                                                </li>
                                                <li>
-                                               <a href="#" style="color: #ffffff">Prices<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                              <a href="#">Prices<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
                                                   <ul>
-                                                      <li><a href="">Private Classes</a></li>
-                                                      <li><a href="">Group Classes</a></li>
+                                                      <li><a href="pricesprivate.html">Private Classes</a></li>
+                                                      <li><a href="pricesgroup.html">Group Classes</a></li>
                                                       </ul>
                                                </li>
-                                               <li><a href="#" style="color: #ffffff">Gallery</a></li>
+                                               <li><a href="gallery.html">Gallery</a></li>
                                                 <li>
-                                               <a href="#" style="color: #ffffff">Contact Us<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
+                                               <a href="#">Contact Us<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
                                                   <ul>
-                                                      <li><a href="">Emails and Phone Numbers</a></li>
-                                                      <li><a href="">Location</a></li>
-                                                      <li><a href="">Description and Links</a></li>
+                                                      <li><a href="contactus.html">Emails and Phone Numbers</a></li>
+                                                      <li><a href="location.html">Location</a></li>
+                                                      <li><a href="links.html">Description and Links</a></li>
                                                       </ul>
                                                </li>
                                            </ul>
@@ -163,9 +163,9 @@
                                     <div class="social_area">
                                         <ul>
                                            <h4>Social Profiles</h4>
-                                            <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i> <span>Facebook</span></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i> <span>Twitter</span></a></li>
-                                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i> <span>Instagram</span></a></li>
+                                            <li><a href="https://www.facebook.com/brainstormenglishbkk/"><i class="fa fa-facebook-official" aria-hidden="true"></i> <span>Facebook</span></a></li>
+                                            <li><a href="https://twitter.com/Brainstormeng"><i class="fa fa-twitter-square" aria-hidden="true"></i> <span>Twitter</span></a></li>
+                                            <li><a href="https://www.instagram.com/brainstormenglishbkk/"><i class="fa fa-instagram" aria-hidden="true"></i> <span>Instagram</span></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -182,12 +182,13 @@
                                     <div class="learn_area">
                                         <ul>
                                            <h4>Courses</h4>
-                                            <li><a href="#">Conversation</a></li> 
-                                           <li><a href="#">Grammer</a></li>
-                                           <li><a href="#">Business English</a></li>
-                                           <li><a href="#">IELTS</a></li>
-                                           <li><a href="#">TOELF</a></li>
-                                           <li><a href="#">TOICE</a></li>
+                                             <li><a href="conversation.html">Conversation</a></li>
+                                                      <li><a href="grammer.html">Grammer</a></li>
+                                                      <li><a href="businessenglish.html">Business English</a></li>
+                                                      <li><a href="ielts.html">IELTS</a></li>
+                                                      <li><a href="toefl.html">TOEFL</a></li>
+                                                      <li><a href="toice.html">TOICE</a></li>
+                                                      <li><a href="academictutoring.html">Academic Tutoring</a></li>
                                            </ul>
                                     </div>
                                 </div>
@@ -195,8 +196,8 @@
                                     <div class="larner_area">
                                         <ul>
                                            <h4>Prices</h4>
-                                            <li><a href="#">Group Classes</a></li>
-                                            <li><a href="#">Private Classes</a></li>
+                                            <li><a href="pricesprivate.html">Private Classes</a></li>
+                                                      <li><a href="pricesgroup.html">Group Classes</a></li>
                                             </ul>
                                     </div>
                                 </div>
@@ -204,9 +205,9 @@
                                     <div class="education_area">
                                         <ul>
                                            <h4>Contact Us</h4>
-                                            <li><a href="#">Emails and Phone Numbers</a></li>
-                                            <li><a href="#">Location</a></li>
-                                            <li><a href="#">Description and Links</a></li>
+                                           <li><a href="contactus.html">Emails and Phone Numbers</a></li>
+                                                      <li><a href="location.html">Location</a></li>
+                                                      <li><a href="links.html">Description and Links</a></li>
                                                                                     </ul>
                                     </div>
                                 </div>
