courses and gallery push

--- a/grammer.html
+++ b/grammer.html
@@ -60,11 +60,7 @@
                                                       </ul>
                                                </li>
                                                <li>
-                                              <a href="#" style="color: #ffffff">Prices<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
-                                                  <ul>
-                                                      <li><a href="pricesprivate.html">Private Classes</a></li>
-                                                      <li><a href="pricesgroup.html">Group Classes</a></li>
-                                                      </ul>
+                                              <li><a href="prices.html" style="color: #ffffff">Prices</a></li>
                                                </li>
                                                <li><a href="gallery.html" style="color: #ffffff">Gallery</a></li>
                                                 <li>
@@ -236,8 +232,7 @@
                                     <div class="larner_area">
                                         <ul>
                                            <h4>Prices</h4>
-                                            <li><a href="pricesprivate.html">Private Classes</a></li>
-                                                      <li><a href="pricesgroup.html">Group Classes</a></li>
+                                            <li><a href="prices.html">Prices</a></li>
                                             </ul>
                                     </div>
                                 </div>
