--- a/biographies.html
+++ b/biographies.html
@@ -60,11 +60,7 @@
                                                       </ul>
                                                </li>
                                                <li>
-                                               <a href="#">Prices<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
-                                                  <ul>
-                                                      <li><a href="pricesprivate.html">Private Classes</a></li>
-                                                      <li><a href="pricesgroup.html">Group Classes</a></li>
-                                                      </ul>
+                                               <li><a href="prices.html">Prices</a></li>
                                                </li>
                                                <li><a href="gallery.html">Gallery</a></li>
                                                 <li>
@@ -209,8 +205,7 @@
                                     <div class="larner_area">
                                         <ul>
                                            <h4>Prices</h4>
-                                            <li><a href="pricesprivate.html">Private Classes</a></li>
-                                                      <li><a href="pricesgroup.html">Group Classes</a></li>
+                                            <li><a href="prices.html">Prices</a></li>
                                             </ul>
                                     </div>
                                 </div>
