--- a/index.html
+++ b/index.html
@@ -60,11 +60,7 @@
                                                       </ul>
                                                </li>
                                                <li>
-                                               <a href="#">Prices<i style="color:#00A3EB;margin-left:2px" class="fa fa-caret-down" aria-hidden="true"></i></a>
-                                                  <ul>
-                                                      <li><a href="pricesprivate.html">Private Classes</a></li>
-                                                      <li><a href="pricesgroup.html">Group Classes</a></li>
-                                                      </ul>
+                                               <li><a href="prices.html">Prices</a></li>
                                                </li>
                                                <li><a href="gallery.html">Gallery</a></li>
                                                 <li>
@@ -211,8 +207,8 @@ We offer a convenient location near the BTS, and affordable rates.</h1>
                                     <div class="larner_area">
                                         <ul>
                                            <h4>Prices</h4>
-                                            <li><a href="pricesprivate.html">Private Classes</a></li>
-                                                      <li><a href="pricesgroup.html">Group Classes</a></li>
+                                            <li><a href="location.html">Location</a></li>
+                                                      
                                             </ul>
                                     </div>
                                 </div>
