--- a/biographies.html
+++ b/biographies.html
@@ -108,37 +108,26 @@
                            <div class="row">
                                <div class="col-md-6">
                                    <div class="page_content_left">
-                                       <h2>Phil Allardice</h2>
-                                     <p>Cu vix ignota dolores. Eirmod luptatum deserunt te mel, ei eam noster animal. Nec illud numquam comprehensam ex. Ut vim ludus vituperata, ex cibo delicatissimi cum. Sint movet graecis ea quo, tamquam torquatos ea has, ei natum omnis vix. Est no errem aliquip, at qui lucilius aliquando.</p>
+                                       <h2>Phil Allardice - Tutor/Co-Founder</h2>
+                                     <center><img src="img/biophil.JPG" class="img-responsive" alt="Phil"></center>
+<p>Hello There, My name is Phil. I'm from the U.K and i'm an English teacher based here in Bangkok for the last 5 years. I have a TESOL certificate (Teaching English to Speakers of Other Languages) from Chichester College, and i’m currently pursuing my B.A in TESOL from Siam Technology College. I have extensive experience of teaching English to a variety of learners from different backgrounds and try my best to offer engaging, fun, yet focused lessons which appeal to the personal interests of you, the student. I look forward to helping you develop to your full potential, and to assist you in reaching and excelling in all your English language learning goals !</p>
                                      <br>
-                                     <p>Cu vix ignota dolores. Eirmod luptatum deserunt te mel, ei eam noster animal. Nec illud numquam comprehensam ex. Ut vim ludus vituperata, ex cibo delicatissimi cum. Sint movet graecis ea quo, tamquam torquatos ea has, ei natum omnis vix. Est no errem aliquip, at qui lucilius aliquando.</p>
+                                     <h2>Touy Smith - I.T/Co-Founder</h2>
+                                     <center><img src="img/biotouy.JPG" class="img-responsive" alt="Touy"></center>
+                                     <p>..</p>
                                      <br>
-                                     <p>Cu vix ignota dolores. Eirmod luptatum deserunt te mel, ei eam noster animal. Nec illud numquam comprehensam ex. Ut vim ludus vituperata, ex cibo delicatissimi cum. Sint movet graecis ea quo, tamquam torquatos ea has, ei natum omnis vix. Est no errem aliquip, at qui lucilius aliquando.</p>
-                                      <ul>
-                                           <li>Video quizzes that let learners learn through context and immersion.</li>
-                                           <li>Give students reps without feeling repetitive.</li>
-                                           <li>Adaptive learning: provide personalized prompts based on previous history.</li>
-                                           <li>Create assignments with due dates and automatic progress tracking.</li> 
-                                           <li>Identify trouble spots that require extra review during class.</li> 
-                                       </ul>
-                                   </div>
+                                 </div>
                                </div>
                                <div class="col-md-6">
                                    <div class="page_content_right">
-                                       <h2>Jason Kendall</h2>
-
-                                     <p>Cu vix ignota dolores. Eirmod luptatum deserunt te mel, ei eam noster animal. Nec illud numquam comprehensam ex. Ut vim ludus vituperata, ex cibo delicatissimi cum. Sint movet graecis ea quo, tamquam torquatos ea has, ei natum omnis vix. Est no errem aliquip, at qui lucilius aliquando.</p>
+                                       <h2>Jason Kendall - Tutor/Co-Founder</h2>
+										<center><img src="img/biojason.JPG" class="img-responsive" alt="Touy"></center>
+                                     <p>Hello Everyone! My name is Jason. I am from London in England but I have been living and teaching in Bangkok, Thailand for the past 7 years and I have had a really wonderful time here. In my time teaching in Thailand I have gained a vast amount of experience. I have taught all ages from kindergarten to seniors and at all ability groups, from beginners to the advanced level. 
+</p>
                                      <br>
-                                     <p>Cu vix ignota dolores. Eirmod luptatum deserunt te mel, ei eam noster animal. Nec illud numquam comprehensam ex. Ut vim ludus vituperata, ex cibo delicatissimi cum. Sint movet graecis ea quo, tamquam torquatos ea has, ei natum omnis vix. Est no errem aliquip, at qui lucilius aliquando.</p>
-                                     <br>
-                                     <p>Cu vix ignota dolores. Eirmod luptatum deserunt te mel, ei eam noster animal. Nec illud numquam comprehensam ex. Ut vim ludus vituperata, ex cibo delicatissimi cum. Sint movet graecis ea quo, tamquam torquatos ea has, ei natum omnis vix. Est no errem aliquip, at qui lucilius aliquando.</p>
-                                      <ul>
-                                           <li>Video quizzes that let learners learn through context and immersion.</li>
-                                           <li>Give students reps without feeling repetitive.</li>
-                                           <li>Adaptive learning: provide personalized prompts based on previous history.</li>
-                                           <li>Create assignments with due dates and automatic progress tracking.</li> 
-                                           <li>Identify trouble spots that require extra review during class.</li> 
-                                       </ul>
+                                     <p>My method is to teach students in a fun, relaxed and open way. I want my students to feel comfortable to ask me anything and to get the best learning experience. I like to teach in engaging ways with fun and effective activities and games that cover all areas of English.
+</p>
+                                     
                                    </div>
                                </div>
                                
