--- a/index.html
+++ b/index.html
@@ -92,16 +92,20 @@
                                 <div class="video_area_inner">
                                     <div class="col-md-4">
                                         <div class="video_content">
-                                            <h1>Brainstorm-English Learn English from Native Speakers in a fun way. 
-We offer a convenient location near the BTS, and affordable rates.</h1>
-                                            <a href=""><button class="btn">Try it Free!</button></a>
+                                            <h1>Welcome to Brainstorm English. 
+The forefront of creative language learning! 
+Jason and Phil are here to help you learn English in fun, innovate and flexible ways. 
+With a down to earth approach and comfortable learning space, we guarantee you an immersive learning experience. 
+</h1>
+<!--                                            <a href=""><button class="btn">Try it Free!</button></a>-->
                                         </div>
                                     </div>.
                                     <div class="col-md-8">
                                         <div class="video_url">
-                                            <div class="embed-responsive embed-responsive-16by9">
+                                           <img src="img/tmphomecover.JPG" class="img-responsive" alt="Placeholder image">
+<!--<div class="embed-responsive embed-responsive-16by9">
                                            <iframe width="1280" height="720" src="https://www.youtube.com/embed/F7VWFA_1lLA" frameborder="0" allowfullscreen></iframe>
-                                          </div>
+                                          </div>-->
                                         </div>
                                         
                                     </div>
@@ -126,18 +130,18 @@ We offer a convenient location near the BTS, and affordable rates.</h1>
                                 </div>
                                    <div class="col-md-8 web_content">
                                    <h3>News and Highlights</h3>
-                                   <p><b>Open Day December 4th, 2016!</b></p>
-                                   <p>Come and join us for our offical open day of Brainstorm-English at the Rabbit 
-                                   hub on December 4th, 2016 from 10am!</p>
+                                   <p><b>Dec 28th 2016: Welcome to our new Website! - Welcome to Brainstorm English. </b></p>
+                                   <p>The forefront of creative language learning! </p>
+                                   <p>Jason and Phil are here to help you learn English in fun, innovate and flexible ways. </p>
+                                   <p>With a down to earth approach and comfortable learning space, we guarantee you an immersive learning experience. </p>
                                     <br>
-                                   <p><b>News item 2</b></p>
-                                   <p>Come and join us for our offical open day of Brainstorm-English at the Rabbit 
-                                   hub on December 4th, 2016 from 10am!</p>
-                                   <br> 
-                                   <P><b>News Item</b></P>
-                                   <P><p><b>Open Day December 4th, 2016!</b></p>
-                                   <p>Come and join us for our offical open day of Brainstorm-English at the Rabbit 
-                                   hub on December 4th, 2016 from 10am!</p></P>
+                                   <p><b>Dec 28th, 2016: ยินดีต้อนรับสู่ Brainstorm English</b></p>
+                                   <p>แถวหน้าของการเรียนรู้ภาษาอังกฤษอย่างสร้างสรรค์</p>
+                                   <p>เจสัน ( Jason ) เเละ ฟิล ( Phil ) อยู่ที่นี่เพื่อช่วยให้คุณเรียนรู้ภาษา</p>
+                                   <p>อังกฤษอย่างสนุกสนาน  ด้วยวีธีที่สร้างสรรค์ และมีความยืดหยุ่น </p>
+                                   <p>ด้วยการเข้าถึงวิธีเรียนรู้แบบธรรมชาติ พร้อมทั้งมีสถานที่สะดวกสะ</p>
+                                   <p>บาย เรารับประกันการเรียนรู้ประสบการณ์ที่คุ้มค่า</p>
+                                   <p>ติดต่อเราได้วันนี้!</p>
                                 </div>
 
                             </div>
