--- a/gallery.html
+++ b/gallery.html
@@ -117,6 +117,10 @@
         <div class="col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="img/galleryimage12.png" /></div>
         <div class="col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="img/galleryimage11.png" /></div>
         <div class="col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="img/galleryimage13.png" /></div>
+        <div class="col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="img/galleryimage14.jpg" /></div>
+        <div class="col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="img/galleryimage15.jpg" /></div>
+        <div class="col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="img/galleryimage16.jpg" /></div>
+        <div class="col-md-3 col-sm-4 col-xs-6"><img class="img-responsive" src="img/galleryimage17.jpg" /></div>
     </div>
 </div>
                    </section>
